Перенесена модель из with_depinject в shared_model